@@ -1,5 +1,7 @@
 V 1.4.6 -- UNRELEASED
 	Add support for \n separated multiline titles (thanks sirlark)
+	New show_only_major_dots option (thanks Le-Stagiaire)
+	Remove 16 colors limitation
 
 V 1.4.5
 	Fix y_labels map iterator exhaustion in python 3
